# plant-cad

./: .gitignore  CHANGELOG.md  Cargo.toml  MISSION-truck-bop-port.md  Makefile.toml
.factory/: init.sh  services.yaml
.factory/skills/rust-bop-worker/: SKILL.md
.factory/skills/rust-worker/: SKILL.md
.github/workflows/: ci.yml
docs/: boolean-ops-architecture-tutorial.md  trim-layer-architecture.md  trim-module-guide.md  truck-bop-architecture.md
docs/plans/: 2026-03-15-truck-bop-phase-1.md  2026-03-24-truck-bop-shell-assembly-repair.md  2026-03-28-truck-bop-trim-pipeline-repair-v2.md  2026-04-01-occt-bool-migration-master-plan-truck-new.md  2026-04-01-truck-bop-pavefiller-migration-plan.md  2026-04-02-occt-bool-migration-execution-checklist.md  2026-04-02-occt-w1-faceinfo-commonblock-contract.md  2026-04-02-occt-w6-section-assembly-diagnostics-plan.md  2026-04-10-current-boolean-ops-architecture.excalidraw  2026-04-13-truck-bop-next-steps.md
scripts/: verify-bool-doc-regressions.sh
truck-bop/: CHANGELOG.md  Cargo.toml  ISSUES.md
truck-bop/examples/: bool_occt_verify.rs  bool_verify.rs
truck-bop/src/: bounding.rs  broad_phase.rs  error.rs  fclass2d.rs  geometry_utils.rs  intersect.rs  lib.rs  options.rs  pave_filler.rs  pipeline.rs  provenance.rs  trim.rs
truck-bop/src/bopds/: arena.rs  common_block.rs  face_info.rs  ids.rs  interference.rs  mod.rs  pave.rs  pave_block.rs  shape_info.rs  split_edge.rs
truck-bop/src/intersect/: ee.rs  ef.rs  ff.rs  ve.rs  vf.rs  vv.rs
truck-meshalgo/: Cargo.toml
truck-stepio/examples/: step-to-mesh.rs
(+15 files in other folders)
