[package]
name = "truck-bop"
version = "0.1.0"
edition = "2021"
description = "Boolean operation infrastructure for truck"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

[dependencies]
derive_more = { version = "2.1.1", features = ["full"] }
thiserror = "2.0.18"
rustc-hash = "2.1.1"
truck-base = { version = "0.5.0", path = "../truck-base" }
truck-geotrait = { version = "0.4.0", path = "../truck-geotrait" }
truck-geometry = { version = "0.5.0", path = "../truck-geometry" }
truck-topology = { version = "0.6.0", path = "../truck-topology" }
truck-meshalgo = { version = "0.4.0", path = "../truck-meshalgo" }
truck-modeling = { version = "0.6.0", path = "../truck-modeling" }

[dev-dependencies]
proptest = "1.10.0"
